Fix scrollbars not following dark theme
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/3604

--- a/src/css/themes/default.css
+++ b/src/css/themes/default.css
@@ -381,9 +381,7 @@
     --logger-scriptlet-surface: rgb(var(--yellow-30) / 40%);
 }
 
-:root.dark input,
-:root.dark select,
-:root.dark textarea {
+:root.dark {
     color-scheme: dark;
 }
 
